# iceberg-bioimage

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: draft-release.yml  publish-docs.yml  publish-pypi.yml  run-tests.yml
docs/src/: conf.py  cytomining.md  getting-started.md  index.md  python-api.md  warehouse-spec.md  workflow.md
docs/src/examples/: metadata-workflow.ipynb
schema/: generate_linkml_erd_png.py  ome_analysis_linkml.erdiagram.compact.mmd  ome_analysis_linkml.erdiagram.mmd  ome_analysis_linkml.plantuml.puml  ome_analysis_linkml.yaml  readme.md
src/iceberg_bioimage/: __init__.py  api.py  cli.py
src/iceberg_bioimage/adapters/: ome_tiff.py  zarr_v2.py
src/iceberg_bioimage/integrations/: __init__.py  catalog.py  cytomining.py  duckdb.py  ome_arrow.py
src/iceberg_bioimage/models/: __init__.py  scan_result.py
src/iceberg_bioimage/validation/: contracts.py
tests/: test_adapters.py  test_api.py  test_catalog_integration.py  test_cli.py  test_cytomining_integration.py  test_ome_arrow_integration.py  test_validation.py
