[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64" ]

[project]
name = "iceberg-bioimage"
version = "0.0.1"
description = "A format-agnostic framework for cataloging and querying bioimaging data (Zarr, OME-TIFF) with Apache Iceberg"
readme = "README.md"
keywords = [
  "bioimage",
  "iceberg",
  "ome-tiff",
  "pyiceberg",
  "zarr",
]
license = "BSD-3-Clause"
authors = [
  { name = "Dave Bunten" },
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "pyarrow>=18",
  "pyiceberg>=0.7.1",
  "tifffile>=2025.1.10",
  "zarr>=2.18.4,<4",
]
optional-dependencies.duckdb = [
  "duckdb>=1.2.2",
]
optional-dependencies.ome-arrow = [
  "ome-arrow>=0.0.4",
]
urls.Documentation = "https://d33bs.github.io/iceberg-bioimage/"
urls.Homepage = "https://github.com/d33bs/iceberg-bioimage"
urls.Issues = "https://github.com/d33bs/iceberg-bioimage/issues"
urls.Repository = "https://github.com/d33bs/iceberg-bioimage"
scripts.iceberg-bioimage = "iceberg_bioimage.cli:main"

[dependency-groups]
dev = [
  "poethepoet>=0.34",
  "pre-commit>=4.2",
  "pytest>=8.3.5",
  "ruff>=0.11.11",
]
docs = [
  "myst-nb>=1.2",
  "pydata-sphinx-theme>=0.16.1",
  "sphinx>=8.2.3",
]
duckdb = [
  "duckdb>=1.2.2",
]
notebooks = [
  "black>=25.1",
  "isort>=6.0.1",
  "jupyterlab>=4.4.2",
  "jupyterlab-code-formatter>=3.0.2",
  "jupytext>=1.17.1",
]
ome-arrow = [
  "ome-arrow>=0.0.4",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages.find.where = [ "src" ]

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
lint.select = [
  # flake8-builtins
  "A",
  # flake8-annotations
  "ANN",
  # flake8-comprehensions
  "C4",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # pylint
  "PL",
  # ruff
  "RUF",
  # flake8-simplify
  "SIM",
  "W",
]
# Ignore `F401` (unused imports) for `__init__.py` file
lint.per-file-ignores."__init__.py" = [ "F401" ]
lint.per-file-ignores."src/iceberg_bioimage/integrations/catalog.py" = [ "PLR0913" ]
lint.per-file-ignores."src/iceberg_bioimage/integrations/duckdb.py" = [ "PLC0415" ]
lint.per-file-ignores."src/iceberg_bioimage/publishing/chunk_index.py" = [ "PLC0415" ]
lint.per-file-ignores."src/iceberg_bioimage/publishing/image_assets.py" = [ "PLC0415" ]

[tool.pytest]
ini_options.pythonpath = [ ".", "src" ]

[tool.jupytext]
formats = "ipynb,py:light"

[tool.vulture]
min_confidence = 90
paths = [ "src/iceberg_bioimage", "tests" ]

[tool.poe]
# tasks for development environments
tasks.test.shell = """
pytest
"""
tasks.lint.shell = """
ruff check
"""
tasks.docs.shell = """
sphinx-build -b html docs/src docs/_build/html
"""
tasks.jupyter.shell = """
jupyter lab
"""
